ensight_lib/test/customFiles/testFlowFiles/invalidFiles/EnsightReader/QStringRead/ASCII.geo
ASCII (OR SIMPLY ANYTHING ELSE BESIDES FORTRAN OR C BINARY)
